# zeek-dpdk

./: .reporter.log.swp  .weird.log.swp  CMakeLists.txt  README  configure.plugin  init.zeek
cmake/: Finddpdk.cmake
scripts/: __load__.zeek  stats.zeek
src/: Dpdk.cc  Dpdk.h  Plugin.cc  Plugin.h  dpdk.bif
tests/dpdk/: show-plugin.zeek
zeekctl/: .dpdk.py.swp  dpdk.py
